--- a/src/css/main.css
+++ b/src/css/main.css
@@ -9,7 +9,7 @@ body {
   background-size: cover;
   object-fit: cover;
   background-repeat: no-repeat;
-  background-image: url(/src/img/codioful.jpg);
+  background-image: url(/src/img/codioful.png);
 }
 
 section {
@@ -28,7 +28,7 @@ section {
   justify-content: space-evenly;
   width: 50%;
   height: 280px;
-  background-image: url(/src/img/backpet.jpg);
+  background-image: url(/src/img/backpet.png);
   border-radius: 10px;
   box-shadow: 4px 4px 4px 4px rgba(25, 25, 26, 0.37);
 
@@ -78,14 +78,6 @@ section {
   cursor: pointer;
   font-size: 1.1em;
 
-
-}
-
-@media (max-width: 768px){
- .container_expires-security{
-  
-  gap:20px;
-}
 }
 
 /*# sourceMappingURL=main.css.map */
