--- a/src/css/main.css
+++ b/src/css/main.css
@@ -9,7 +9,7 @@ body {
   background-size: cover;
   object-fit: cover;
   background-repeat: no-repeat;
-  background-image: url(/src/img/codioful.png);
+  background-image: url(/src/img/codioful.jpg);
 }
 
 section {
@@ -28,7 +28,7 @@ section {
   justify-content: space-evenly;
   width: 50%;
   height: 280px;
-  background-image: url(/src/img/backpet.png);
+  background-image: url(/src/img/backpet.jpg);
   border-radius: 10px;
   box-shadow: 4px 4px 4px 4px rgba(25, 25, 26, 0.37);
 
