--- a/src/css/main.css
+++ b/src/css/main.css
@@ -10,7 +10,7 @@ body {
   object-fit: cover;
   background-repeat: no-repeat;
   background-position: center;
-  background-image: url(/assets/codioful.jpg);
+  background-image: url(/assets/bodyimg.jpg);
   
 }
 
